# sagemcom-f3896-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  nodemon.json  pyproject.toml
.github/workflows/: dev.yaml  python.yml  release.yaml
sagemcom_f3896/: __init__.py  client.py  models.py  util.py
sagemcom_f3896_client/: __init__.py  cli.py  client.py  exception.py  exporter.py  log_parser.py  models.py  profile_messages.py  templates.py  util.py
tests/: conftest.py  test_client.py  test_client_session.py  test_exporter.py  test_log_parser.py  test_login.py  test_profile_messages.py  util.py
